<resources>
    <string name="app_name">alacena</string>

    <!--Activity main -->
    <string name="txtMain">Desarrollado por el equipo ``The Dictamens´´: \n \n 1.Chanona Hernandez Saúl Xavier \n 2.Estella Huerta Angel \n 3.Garza Robles Gerardo \n 4.Jimenez Zea Juan Pablo \n 5.Vazquez Santiago Alejandro Jonathan </string>
    <string name="btnLogMain">iniciar sesión</string>
    <string name="btnmRegMain">Crear Usuario</string>

    <!--Activity inicio de sesion -->
    <string name="txtTitLog">Inicio de Sesión</string>
    <string name="txtCorLog">Ingrese su correo electronico</string>
    <string name="txtConLog">Ingrese una contraseña</string>
    <string name="btnLogLog">iniciar sesión</string>

    <!--Activity Registro-->
    <string name="Box">Acepto el aviso de privacidad</string>
    <string name="txtConAvi">Ver el aviso de privacidad</string>
    <string name="txtTitReg">Registro</string>
    <string name="txtIngReg">Ingrese sus datos de usuario</string>
    <string name="txtNomReg">Nombre(s)</string>
    <string name="txtPatReg">Apellido Paterno</string>
    <string name="txtMatReg">Apellido Mterno</string>
    <string name="txtCorReg">Ingrese su correo electronico</string>
    <string name="txtConReg">Ingrese una contraseña</string>
    <string name="txtConCReg">Confirma tu contraseña</string>
    <string name="btnRegReg">Registrate</string>

    <!--Activity Elejir rol-->
    <string name="txtTitEle">Elejir un Rol</string>
    <string name="txtDesUnEle">Para entrar como integrante tendras que solicitar a el creador de un Grupo Familiar ingrese el codigo a continuacion y da en el boton Ingresar</string>
    <string name="txtCodEle">Codigo</string>
    <string name="btnIngEle">Ingresar</string>
    <string name="txtDesCEle">Para crear un Grupo Familiar solo debes de dar al boton de crear en esta opcion, al crear el grupo tu seras el Administrador y podras invitar a mas usuarios </string>
    <string name="btnCreEle">Crear</string>

    <!--barra para navegacion de fragment-->
    <string name="txtInvFra">Inventario</string>
    <string name="txtRecFra">Recetas</string>
    <string name="txtLisFra">Lista</string>

    <!--Menu Lateral desplegable-->
    <string name="txtCorMen">correo:</string>
    <string name="txtNomMen">name:</string>
    <string name="txtIrCMen">Ir a configuración de cuenta</string>
    <string name="txtIrGMen">Ir a configuracion del Grupo</string>
    <string name="txtCerrarSession">Cerrar Sesión</string>
    <string name="txtCodMen">codigo:</string>

    <!--Activity configuracion de cuenta-->
    <string name="txtConCuen">Configurar cuenta</string>
    <string name="txtCamNom">Cambiar nombre</string>
    <string name="txtCamCor">Cambiar correo</string>
    <string name="txtCamCon">Cambiar Contraseña</string>
    <string name="btnConfDat">Confirmar cambios de Datos</string>
    <string name="txtIngCon">Ingrese su contraseña</string>
    <string name="btnConfCamCor">Confirmar cambio de E-mail</string>
    <string name="btnConfCon">Confirmar cambio contraseña</string>

    <!--Activity configuracion de grupo-->

    <!--Fragment Lista-->
    <string name="btnSubLis">agregar</string>

    <!--Fragment Inventario-->
    <string name="txtDayInv"> dias</string>
    <string name="txtEditInv">Editar</string>
    <string name="txtElimInv">Eliminar</string>

    <!--Fragment Recetas-->
    <string name="txtIngRec">Ingredientes:</string>
    <string name="txtPreRec">Preparación:</string>


    <!--Mensaje toast-->
    <string name="msjToaCorLog">Ingresa Correo</string>
    <string name="msjToaConLog">Ingresa una contraseña de minimo 8 caracteres</string>
    <string name="msjToaConReg">Las contraseñas no coinciden</string>
    <string name="msjToaTodosReg">Ingresa una contraseña de minimo 8 caracteres</string>
    <string name="msjToCamReg">ingresa todo los campos</string>
    <string name="msjToaNonLog">Correo y/o contraseña incorrectos</string>
    <string name="msjToaExiUser">El correo ya esta registrado con otro usuario</string>
    <string name="msjToaNotGru">Grupo no encontrado</string>
    <string name="msjToaExiInv">El ingrediente ya existe</string>
    <string name="msjToaNoExi">Nada Encontrado</string>
    <string name="msjToaNoValidCorr">Ingrese un correo valido</string>
    <string name="msjToaConInv">Contraseña invalida</string>

    <!--Activity agregar a Lista-->
    <string name="txtTitLis">Ingresar ingrediente a la lista</string>
    <string name="txtCanLis">Ingresar Cantidad del ingrediente</string>
    <string name="txtNomLis">Ingresar Nombre del ingrediente</string>
    <string name="ButGuar">Guardar cambios </string>

    <!--Activity agregar a Inventario-->
    <string name="txtTitInv">Ingresar ingrediente al Inventario</string>
    <string name="txtCanInv">Ingresar Cantidad del ingrediente</string>
    <string name="txtNomInv">Ingresar Nombre del ingrediente</string>
    <string name="txtFecInv">Ingresa una fecha de uso</string>
    <string name="txtTiteditInv">Editar Ingrediente</string>

    <!--Activity agregar Receta-->
    <string name="txtTitRec">Ingresar Receta al Recetario</string>
    <string name="txtNomRec">Ingresar Nombre de la receta</string>
    <string name="txtIngR">Ingresa los ingredientes de la receta</string>
    <string name="txtPreR">Ingresa la preparacion de la receta</string>
    <string name="txtCanI">Cantidad:</string>
    <string name="txtNomI">Nombre:</string>
    <string name="confirm">Confirmar</string>

    <!--Strings Alert Dialog-->
    <string name="dialElim">¿Esta seguro de querer eliminar?</string>
    <string name="acepElim">Aceptar</string>
    <string name="rechElim">Cancelar</string>

    <!--Fechas-->
    <string name="numDia">Dia: </string>
    <string name="numMes">Mes: </string>
    <string name="numAno">Año: </string>


</resources>