<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigCuenta">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/Concuen"
        style="@style/estilotexttitle"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtConCuen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Concuen"
        app:layout_constraintVertical_bias="0.078">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/txtCamNom"
                style="@style/estilotextview"
                android:layout_width="346dp"
                android:layout_height="21dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:text="@string/txtCamNom"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="346dp"
                android:layout_height="60dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtNomReg" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="346dp"
                android:layout_height="60dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPatReg"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="346dp"
                android:layout_height="60dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtMatReg" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnConfCamDat"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/btnConfDat" />

            <TextView
                android:id="@+id/txtCamCor"
                style="@style/estilotextview"
                android:layout_width="346dp"
                android:layout_height="21dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:text="@string/txtCamCor"/>

            <EditText
                android:id="@+id/TxtCor"
                android:layout_width="346dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textEmailAddress" />
            <Button
                android:id="@+id/btnConfCamCor"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnConfCamCor" />


            <TextView
                android:id="@+id/txtCamCon"
                style="@style/estilotextview"
                android:layout_width="346dp"
                android:layout_height="21dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:text="@string/txtCamCon"/>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="346dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtConReg"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="346dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtConCReg"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnConfCamCon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnConfCon" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>