<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/titleReg"
        style="@style/estilotexttitle"
        android:layout_width="237dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtTitReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDatUsu"
        style="@style/estilotextview"
        android:layout_width="346dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtIngReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleReg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="346dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDatUsu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNomReg" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPat"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPatReg" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMat"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtMatReg" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewcorr"
        style="@style/estilotextview"
        android:layout_width="195dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtCorReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputMat" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewcorr" />

    <TextView
        android:id="@+id/textViewcontra"
        style="@style/estilotextview"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtConReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewcontra" />

    <TextView
        android:id="@+id/textViewconfirmcontra"
        style="@style/estilotextview"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:text="@string/txtConCReg"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextConfPassword"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewconfirmcontra" />

    <Button
        android:id="@+id/Registro"
        style="@style/estilobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfPassword"
        app:layout_constraintVertical_bias="0.261" />



</androidx.constraintlayout.widget.ConstraintLayout>